--- a/src/app/components/reuse/Article.module.css
+++ b/src/app/components/reuse/Article.module.css
@@ -48,6 +48,18 @@
     height: 110%;
     width: 90%;
 }
+.paragraph{
+    margin: 0;
+}
+.Valo{
+    color: gold;
+}
+.CS2{
+    color: purple;
+}
+.Lol{
+    color: #223797;
+}
 
 
 /* xl */
