--- a/src/app/components/reuse/Projectbase.module.css
+++ b/src/app/components/reuse/Projectbase.module.css
@@ -67,7 +67,7 @@
     width: 300px;
     display: grid;
     grid-template-columns: 1fr 1fr 0.5fr;
-    grid-template-rows: repeat(4 1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-items: center;
     text-align: left;
     gap: 0.2rem;
@@ -210,12 +210,14 @@
 
 @media(orientation:portrait){
     .projects{
-        width: 299px;
+        width: 350px;
         height: 1300px;
-        margin-left: 1%;
     }
     .header{
         color: white;
+    }
+    .summaryContainer0{
+        color: #fff8c7;
     }
     .projectInfoContainer{
         flex-direction: column;
